# apex-ai

./: Hellow World.rs  README.md
Optical/: Brochures & Spec Sheets.mhtml  Product Manuals.mhtml  Search for other - Optical Lens Manufacturing Guide.mhtml
RF/: ChatGPT - Search for ST25R3918.mhtml  ChatGPT -adhesive portable tag.mhtml  ST25R3916-DISCO _ Product - STMicroelectronics.mhtml  ST25R3918 _ App note - STMicroelectronics.mhtml  ST25R3918 _ Product - STMicroelectronics-2.mhtml  ST25R3918 _ Product - STMicroelectronics.mhtml  Search for other - SAW_LC Filter Options.mhtml  X-NUCLEO-NFC06A1 _ Product - STMicroelectronics.mhtml
RF/Impinj/: ChatGPT - Search for Impinj.mhtml
RF/RFMD/: RFMD PA Module.mhtml  SKY6631x RF Amplifiers & Development Tools - Skyworks Solutions Inc. _ Mouser.mhtml  Skyworks Newest RF Amplifier – Mouser.mhtml  Skyworks RF Amplifier – Mouser.mhtml  Skyworks RF Amplifier-1 – Mouser.mhtml  Skyworks RF Amplifier-2 – Mouser.mhtml
RF/skyworks/: 4259-63 pSemi _ Mouser.mhtml  PE42553B-Z pSemi _ Mouser United Kingdom.mhtml  SKY66318-11 High-Efficiency Power Amplifier - Skyworks Solutions Inc. _ Mouser.mhtml  ST25R3918 _ Product - STMicroelectronics.mhtml  Search Results.mhtml  Skyworks RF Amplifier – Mouser.mhtml  Skyworks RF Switch ICs – Mouser.mhtml
RFID/: uhf_rfid_866mhz_points.csv
onvif/onvif-camera-cpp/: CMakeLists.txt  README.md  onvif-camera-cpp.pro
onvif/onvif-camera-cpp/include/: camera_connection_info.hpp  mainwindow.h  onvif_client.hpp  onvif_device_service.hpp  onvif_media_service.hpp  result.hpp  rtsp_stream_player.hpp
onvif/onvif-camera-cpp/scripts/: generate_onvif_gsoap.sh
onvif/onvif-camera-cpp/src/: main.cpp  main_qt.cpp  mainwindow.cpp  onvif_client.cpp  onvif_device_service.cpp  onvif_log.hpp  onvif_media_service.cpp  onvif_soap_context.cpp  onvif_soap_context.hpp  result.cpp  rtsp_stream_player.cpp
websites/qorvo/: hts-log.txt  index.html
websites/qorvo amplifier/: index.html
websites/qorvo amplifier/qorvo/: cookies.txt  index.html
websites/qorvo amplifier/qorvo/browser-update.org/: update.min.js
websites/qorvo amplifier/qorvo/dc.ads.linkedin.com/collect/: indexaa84.html
websites/qorvo amplifier/qorvo/hts-cache/: new.lst  new.txt  winprofile.ini
websites/qorvo amplifier/qorvo/platform.linkedin.com/: in.js
websites/qorvo/product/: cookies.txt  hts-log.txt
websites/qorvo/product/dc.ads.linkedin.com/collect/: indexaa84.html
websites/qorvo/product/hts-cache/: new.lst  new.txt
websites/qorvo/product/platform.linkedin.com/: in.js
(+40 files in other folders)
